--- a/tmall/CSS/index.css
+++ b/tmall/CSS/index.css
@@ -1,12 +1,17 @@
-#container{
+body{
     height: 2000px;
+}
+
+#container{
+    background: #f2f2f2;
+    height: 32px;
 }
 
 /* 给整个导航条设置样式 */
 #navigator {
-    background: #f2f2f2;
+    margin: 0px auto;
+    width: 1230px;
     height: 32px;
-    padding: 0px 75px 0px 35px;
 }
 
 /* 给menue-login的li选项列表设置浮动 */
@@ -23,12 +28,13 @@
     line-height: 32px;
     display: block;
     height: 32px;
-    margin: 0px 10px;
+    margin:0px 10px;
 }
 
 /* 给menue-nav的li选项列表设置浮动 */
 #navigator .menue-nav>li {
     float: right;
+    margin: 0px 6px;
 }
 
 /* 给所有的列表项设置悬浮的颜色 */
@@ -78,4 +84,28 @@
 /* 设置当鼠标划过导航列表的选项卡的时候，设置背景颜色 */
 #navigator .menue-nav .item:hover {
     background: #fff;
+}
+
+#navigator .menue-nav >li{
+    position: relative;
+}
+
+#navigator .menue-nav >li .iconfont{
+    position: absolute;
+    top: 9px;
+    left:-5px;
+    font-size:12px;
+    color: #ff0036;
+    font-family: "Microsoft YaHei",tahoma,arial,'Hiragino Sans GB','\5b8b\4f53',sans-serif;
+}
+
+#navigator .menue-nav .tringle .arrow{
+    height: 0px;
+    width: 0px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #999 transparent transparent transparent;
+    position: absolute;
+    top: 50%;
+    right: 4px;
 }
