--- a/tmall/CSS/index.css
+++ b/tmall/CSS/index.css
@@ -121,7 +121,7 @@ body{
     display: block;
     position: absolute;
     left: -60px;
-    top: 26px;
+    top: 28px;
     border-width:1px;
     border-style: solid;
     border-color: #eee #eee transparent #eee;
@@ -130,10 +130,10 @@ body{
 #navigator .menue-nav >li:hover .arrow1{
     height: 0px;
     width: 0px;
-    border-width: 5px;
+    border-width: 7px;
     border-style: solid;
-    border-color: transparent transparent green transparent;
+    border-color: transparent transparent #fff transparent;
     position: absolute;
-    top: 17px;
+    top: 15px;
     left: 50%;
 }
