--- a/tmall/CSS/index.css
+++ b/tmall/CSS/index.css
@@ -41,17 +41,19 @@ body{
     width: 72px;
     color: #999;
     font-size: 12px;
-    line-height: 32px;
+    line-height: 20px;
     display: block;
-    height: 32px;
+    height: 20px;
     text-align: center;
-    /* margin:0px 10px; */
+    /* padding: 0px 2px; */
+    /* margin: 10px 0px; */
 }
 
 #navigator .menue-nav .item .submenue .submenue-bussi-help li a {
-    width: 60px;
+    width: 50px;
     height: 20px;
 }
+
 
 
 
@@ -66,7 +68,7 @@ body{
 /* 可以在此处设置导航项右侧的小三角形的动画 */
 
 /* 设置当鼠标划过导航列表的选项卡的时候，设置背景颜色，显示下划线*/
-#navigator .menue-nav .item:hover {
+#navigator .menue-nav .item:hover, #navigator .menue-nav .submenue li:hover a {
     background: #fff;
     text-decoration: underline;
 }
@@ -78,6 +80,7 @@ body{
     border-style: solid;
     border-color: transparent #eee #eee #eee;
     position: absolute;
+    padding: 8px 8px;
 }
 
 /* 设置当鼠标划过子列表上的选项卡的时候，子列表显示 ，#navigator .menue-nav >li:hover .bussi-suppor-menue*/
@@ -89,7 +92,7 @@ body{
 #navigator .menue-nav >li .iconfont{
     position: absolute;
     top: 10px;
-    left:-5px;
+    left: 0px;
     font-size:12px;
     color: #ff0036;
     font-family: "Microsoft YaHei",tahoma,arial,'Hiragino Sans GB','\5b8b\4f53',sans-serif;
@@ -142,22 +145,29 @@ body{
 /* 一下是商家支持部分样式 */
 #navigator .menue-nav .item .bussi-suppor-menue{
     /* position: absolute; */
-    padding-bottom: 5px;
-    left: -73px;
+    padding: 0px 0px 8px 8px;
+    left: -81px;
 }
 
 #navigator .menue-nav .item .bussi-suppor-menue .submenue-bussi-help{
-    width: 140px;
+    width: 120px;
     border-bottom: 1px dotted #999;
+    padding-bottom: 2px;
 }
 
 #navigator .menue-nav .item .bussi-suppor-menue .submenue-bussi-help li{
     float: left;
-    height: 20px;
-    margin: 0px 5px;
+    height: 22px;
+    margin: 1px 5px 1px 0px;
 }
 
 #navigator .menue-nav .item .bussi-suppor-menue span{
     font-size: 12px;
-    margin-left: 10px;
+}
+
+#navigator .menue-nav .icon-owner{
+    padding-left: 3px;
+    /* padding-right: -10px; */
+    /* background: red; */
+
 }
