--- a/移动端/移动端js部分/移动端美团高仿/index.css
+++ b/移动端/移动端js部分/移动端美团高仿/index.css
@@ -7,16 +7,129 @@ body{
 }
 
 #header{
-    height: 1.01rem;
+    height: 1rem;
     background: #06c1ae;
     display: flex;
-    line-height: 1.01rem;
+    line-height: 1rem;
+    border-bottom: 1px solid #21897d;
 }
 
 #header .address{
     color: #fff;
-    margin: 0 0.2rem;
+    margin-left: 0.2rem;
+    width: 2rem
 }
 #header .icon-xiajiantou{
     font-size: .16rem;
+}
+#header .search{
+    position: relative;
+    height: .64rem;
+    background: rgba(0,0,0,.15);
+    border-radius: .06rem;
+    margin-top: .2rem;
+    line-height: .64rem;
+    flex: 1;
+    padding-left: .1rem;
+    padding-right: .3rem;
+}
+#header .icon-sousuo{
+    font-size: .36rem;
+    color: #fff;
+    position: absolute;
+    left: .15rem;
+    top: .05rem;
+}
+#header .search-input{
+    position: relative;
+    left: .5rem;
+    background: rgba(0,0,0,0);
+    outline: none;
+    border: none;
+    font-size: .26rem;
+}
+#header .search-input::-webkit-input-placeholder{
+    color: #68dbce;
+    font-size: .26rem;
+}
+
+#header .profile{
+    width: 1.4rem;
+    position: relative;
+}
+#header .icon-wode{
+    font-size: .6rem;
+    position: absolute;
+    top: -.1rem;
+    left: .2rem;
+    color: #fff;
+}
+
+#header .profile span{
+    /* font-size: .1rem; */
+    color: #fff;
+    position: absolute;
+    top: .3rem;
+    left: .27rem;
+    /* 这里存在问题 */
+    font-size: .2rem;
+}
+
+/* 以下是banner部分样式 */
+#banner{
+    border-bottom: 1px solid #c6c0b3;
+    position: relative;
+}
+#banner .banner-img{
+    width: 100%;
+    height: 100%;
+}
+#banner .open-app{
+    position: absolute;
+    width: 31%;
+    height: 34%;
+    left: 17%;
+    bottom: 13%;
+    background: rgba(0,0,0,0);
+}
+#banner .download-app{
+    position: absolute;
+    width: 31%;
+    height: 34%;
+    right: 17%;
+    bottom: 13%;
+    background: rgba(0,0,0,0);
+}
+
+/* 以下是product-list样式 */
+#product-list ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+#product-list li{
+    text-align: center;
+    width: 20%;
+    padding: .2rem 0px;
+}
+#product-list a{
+    text-decoration: none;
+}
+#product-list .icon-container{
+    width: .75rem;
+    height: .75rem;
+    border-radius: 10rem;
+    text-align: center;
+    line-height: .75rem;
+    /* font-size: .8rem; */
+    color: #fff;
+    margin: auto auto .14rem auto;
+}
+#product-list .iconfont{
+    font-size: .55rem;
+}
+#product-list span{
+    font-size: .2rem;
+    color: #666;
 }
