--- a/webpack/src/index.css
+++ b/webpack/src/index.css
@@ -1,4 +1,5 @@
 body{
     background-color: pink;
-    background-image: url(./images/shuqian.gif) 
+    background-image: url(./images/shuqian.gif) ;
+    background-repeat: no-repeat;
 }
