--- a/webpack/src/index.css
+++ b/webpack/src/index.css
@@ -2,4 +2,5 @@ body{
     background-color: pink;
     background-image: url(./images/shuqian.gif) ;
     background-repeat: no-repeat;
+    transform:rotate(30deg);
 }
