--- a/初步node/nodeapp/views/login.ejs
+++ b/初步node/nodeapp/views/login.ejs
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/do_reg" method="POST">
+    <form action="/login" method="POST">
         姓名：<input type="text" name="name"><br>
         密码：<input type="password" name="password"><br>
-        <input type="submit" value="注册">
+        <input type="submit" value="登陆">
     </form>
 </body>
 </html>
