--- a/初步node/newblog/views/index_logined.ejs
+++ b/初步node/newblog/views/index_logined.ejs
@@ -80,7 +80,7 @@
   <strong>博客管理</strong>
   <ul class="LinkLine">
 	<li><a href="/add">发表博客</a></li>
-			<li><a href="blogCatalogs.htm">博客分类管理</a></li>
+			<li><a href="/catalog">博客分类管理</a></li>
 	<li><a href="blogs.htm">文章管理</a></li>
 	<li><a href="blogComments.htm">网友评论管理</a></li>
   </ul>
