--- a/初步node/newblog/views/updateBlog.ejs
+++ b/初步node/newblog/views/updateBlog.ejs
@@ -129,7 +129,7 @@
   <tr><td>&nbsp;</td></tr>
   <tr class="submit">
 	<td>
-	<input value=" 发 表 " class="BUTTON SUBMIT" type="submit">
+	<input value=" 更 新 " class="BUTTON SUBMIT" type="submit">
 	<input name="as_top" value="1" type="checkbox"> 
 	设置为置顶	
     <span id="ajax_processing" style="margin-left:10px;">正在提交，请稍候...</span>
