--- a/初步node/newblog/views/index_logined.ejs
+++ b/初步node/newblog/views/index_logined.ejs
@@ -81,7 +81,7 @@
   <ul class="LinkLine">
 	<li><a href="/add">发表博客</a></li>
 			<li><a href="/catalog">博客分类管理</a></li>
-	<li><a href="blogs.htm">文章管理</a></li>
+	<li><a href="/manageBlog">文章管理</a></li>
 	<li><a href="blogComments.htm">网友评论管理</a></li>
   </ul>
 </div>
@@ -95,9 +95,6 @@
 				</a>
 			</li>
 		  <% })%>
-    	<!-- <li><a href="#">工作日志(3)</a></li> -->
-		<!-- <li><a href="#">日常记录(0)</a></li> -->
-		<!-- <li><a href="#">转贴的文章(0)</a></li> -->
 	  </ul>
 </div>
 <div class="comments SpaceModule">
